# voice-ai

./: ._pocket_ai_voice_recorder_riscv_tinyml_plan.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark_whisper.py  convert_to_tflite.py  index.html  n.txt  pocket_ai_voice_recorder_riscv_tinyml_plan.md  results.csv  speech_simulator.py  tiny_vad.onnx  tiny_vad_best.pt  tiny_vad_int8.tflite  train_tiny_vad.py
docs/: .rl_impl_todo.md  00_onboarding_overview.md  01_model_and_quantization.md  02_firmware_and_simulation.md  03_accelerator.md  04_optimizer.md  05_commands_cheatsheet.md  06_rtl_to_gds.md  07_rl_pipeline_design.md  08_funnel_optimizer.md  README.md
optimizer/: __init__.py  benchmark_agents.py  benchmark_funnel.py  build_table.py  cascade.py  cascade_env.py  cascade_reward.py  dashboard.py  env.py  fit_surrogate.py  funnel.py  measure_real.py  physical_env.py  physical_reward.py  physical_runner.py  recipe.py  reward.py  run_cascade_optimizer.py  run_funnel_optimizer.py  run_optimizer.py  run_physical_optimizer.py  runner.py  search.py  search_space.yaml  search_space_full.yaml  search_space_funnel.yaml  sim_measurements.txt  test_cascade.py  test_reward_sanity.py  validate.py
optimizer/agents/: __init__.py  (+7 more)
physical/orfs/: BUILD.bazel  README.md  constraints.sdc  sync.sh  synth_area.sh
physical/orfs/make/: README.md  run.sh  sweep.sh
physical/orfs/make/asap7/tinymac_accel/: config.mk  constraint.sdc
physical/orfs/make/nangate45/tinymac_accel/: config.mk  constraint.sdc
physical/orfs/make/sky130hd/tinymac_accel/: config.mk  constraint.sdc
scripts/: setup_picorv32.sh
(+73 files in other folders)
