# tinymac_accel — Stage-6 RTL-to-GDS for the TinyVAD int8 matvec accelerator.
#
# This is the canonical copy of the ORFS design definition. It is run inside
# the bazel-orfs *gallery* workspace (WSL: ~/bazel-orfs/gallery/tinymac), which
# supplies the cached OpenROAD toolchain and ORFS PDKs. `sync.sh` copies this
# file, constraints.sdc, and the RTL from rtl/accel/ into that package.
#
#   # from ~/bazel-orfs/gallery:
#   bazel build //tinymac:tinymac_accel_synth     # synthesis + area/cell report
#   bazel build //tinymac:tinymac_accel_route      # through routing (timing reports)
#   bazel build //tinymac:tinymac_accel_final      # full flow -> GDS
#
# Retarget the PDK by changing `pdk` below (sky130hd for bring-up, asap7 for the
# project's real 7nm-class numbers).

load("//:defs.bzl", "demo_flow")

demo_flow(
    name = "tinymac_accel",
    arguments = {
        # --- Floorplan & Placement ---
        "CORE_UTILIZATION": "40",
        "PLACE_DENSITY": "0.60",
        # --- Speed defaults (drop these to improve QoR) ---
        "GPL_ROUTABILITY_DRIVEN": "0",
        "GPL_TIMING_DRIVEN": "0",
        "SKIP_CTS_REPAIR_TIMING": "1",
        "SKIP_INCREMENTAL_REPAIR": "1",
        "SKIP_LAST_GASP": "1",
        "FILL_CELLS": "",
        "TAPCELL_TCL": "",
    },
    pdk = "@orfs//flow:sky130hd",
    sources = {
        "SDC_FILE": [":constraints.sdc"],
    },
    verilog_files = [
        "tinymac_accel.v",
        "int8_mac_array.v",
        "requantize.v",
    ],
)
